--- a/public/assets/css/pages/auth/auth.css
+++ b/public/assets/css/pages/auth/auth.css
@@ -2,8 +2,8 @@
    Estilos Gerais - Auth
 ===================== */
 :root {
-  --primary-color: #5165FF;
-  --primary-hover: #3B4FE3;
+  --primary-color: #e4ec6f;
+  --primary-hover: #862f1e;
   --primary-light: #EDF0FF;
   --text-primary: #333333;
   --text-secondary: #6B7280;
