--- a/src/Views/auth/register.twig
+++ b/src/Views/auth/register.twig
@@ -63,8 +63,9 @@
                     >
                 </div>
                 {% if prefillEmail is defined and prefillEmail %}
-                    <button type="button" id="change-email" class="btn small">Alterar e-mail</button>
-                {% endif %}
+    <a href="/login" id="change-email" class="btn small">Alterar e-mail</a>
+{% endif %}
+
             </div>
 
             <div id="group-password" class="form-group">
