--- a/src/Views/events/index.twig
+++ b/src/Views/events/index.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Eventos{% endblock %}
 
+{% block styles %}
+  <link rel="stylesheet" href="/assets/css/pages/events/index.css">
+{% endblock %}
+
 {% block content %}
 <div class="eventos-container">
   <h2 class="eventos-header">Eventos e Atividades</h2>
