--- a/public/assets/css/pages/static/about.css
+++ b/public/assets/css/pages/static/about.css
@@ -64,6 +64,16 @@ ul {
   list-style: none;
 }
 
+.recurso-icone i {
+  font-size: 3rem;      /* 48px */
+  color: #2c3e50;       /* ajuste conforme sua paleta */
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+}
+
 /* Container */
 .container {
   max-width: var(--container-max);
@@ -196,7 +206,7 @@ section:nth-child(odd) {
    BANNER PRINCIPAL
    ====================================== */
 #banner-principal {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/assets/images/banner-background.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1627556704314-1f7aee38ec57?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
