--- a/src/Views/layouts/partial/header.twig
+++ b/src/Views/layouts/partial/header.twig
@@ -47,7 +47,7 @@
 
                 {# Turmas #}
                 {{ _self.dropdown(
-                    'Turmas',
+                    'Acervo',
                     'chalkboard-teacher',
                     'classes',
                     isTeacher
@@ -119,7 +119,7 @@
                 <div class="mobile-menu-section">
                     <button class="mobile-menu-section-toggle" aria-expanded="false"
                             aria-controls="mobile-section-turmas">
-                        <i class="fas fa-chalkboard-teacher"></i> Turmas
+                        <i class="fas fa-chalkboard-teacher"></i> Acervo
                         <i class="fas fa-chevron-down arrow"></i>
                     </button>
                     <div id="mobile-section-turmas" class="mobile-menu-subsection">
